# nanochat

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  scaling.sh  speedrun_simple.sh
dev/critical_batchsize/: CodeStyle.md  README.md  methods.md
dev/critical_batchsize/analysis/: config.yaml  fit_bcrit.py
dev/critical_batchsize/transformer/: config.yaml  measure.py  measure_config.yaml  train.py
dev/x/: extract_chinchilla_fig3.py  extracted_chinchilla_data.csv  plot_lr_scaling.py
docs/: changelog.md  possible_bugs.md  possible_upgrades.md
nanochat/: common.py  dataloader.py  gpt.py  training_logger.py
scripts/: base_train.py  setup_gpt4_tokenizer.py
